reconfigure color button

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                     development.
                 </p>
                 <div class="button-container">
-                    <a onclick="changeColor()" class="color-button">Randomize font color</a>
-                    <a onclick="defaultColor()" class="color-button">Default font color</a>
+                    <button onclick="changeColor()" class="color-button">Randomize font color</button>
+                    <button onclick="defaultColor()" class="color-button">Default font color</button>
                 </div>
             </article>
             <aside class="card">
